Fixed checkboxes so they stack and collapse correctly

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 /* GOOGLE MAPS */
-html, body {
+html, body, .container {
 	height: 100%;
 	margin: 0;
 	padding: 0;
@@ -7,10 +7,6 @@ html, body {
 }
 
 #map-canvas {
-	width: 100%;
-	height: 100%;
-	/*width: 400px;*/
-	/*height: 400px;*/
 	margin: 0;
 	padding: 0;
 }
